--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -37,11 +37,23 @@
     </dependencies>
 
     <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
+    <finalName>hospital-er</finalName>  <!-- Add this -->
+    <plugins>
+        <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <version>3.1.5</version>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>repackage</goal>
+                    </goals>
+                </execution>
+            </executions>
+            <configuration>
+                <mainClass>com.hospital.er.HospitalApplication</mainClass>
+            </configuration>
+        </plugin>
+    </plugins>
     </build>
 </project>
