--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -1,5 +1,9 @@
 [phases.setup]
-cmds = ["apt-get update && apt-get install -y maven"]
+cmds = [
+    "apt-get update",
+    "apt-get install -y maven ca-certificates openssl",
+    "update-ca-certificates"
+]
 
 [phases.install]
 cmds = ["mvn dependency:go-offline"]
@@ -9,3 +13,10 @@ cmds = ["mvn clean package -DskipTests"]
 
 [start]
 cmd = "java -jar target/hospital-er-*.jar"
+
+# Add SSL/TLS configuration
+[build.args]
+JAVA_VERSION = "17"
+
+[environment]
+JAVA_TOOL_OPTIONS = "-Djavax.net.ssl.trustStore=/etc/ssl/certs/java/cacerts -Djavax.net.ssl.trustStorePassword=changeit"
