--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -1,8 +1,9 @@
 [phases.setup]
 cmds = [
     "apt-get update",
-    "apt-get install -y maven ca-certificates openssl",
-    "update-ca-certificates"
+    "apt-get install -y ca-certificates openssl",  
+    "update-ca-certificates",  
+    "apt-get install -y maven"
 ]
 
 [phases.install]
@@ -12,11 +13,4 @@ cmds = ["mvn dependency:go-offline"]
 cmds = ["mvn clean package -DskipTests"]
 
 [start]
-cmd = "java -jar target/hospital-er-*.jar"
-
-# Add SSL/TLS configuration
-[build.args]
-JAVA_VERSION = "17"
-
-[environment]
-JAVA_TOOL_OPTIONS = "-Djavax.net.ssl.trustStore=/etc/ssl/certs/java/cacerts -Djavax.net.ssl.trustStorePassword=changeit"
+cmd = "java -Djdk.tls.client.protocols=TLSv1.2 -jar target/hospital-er-*.jar"  
