--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,2 @@
 server.port=8080
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
-# Load secret properties from external file
-spring.config.import=optional:file:./application-secret.properties[.properties]
-# Also support .env file
-spring.config.import=optional:file:.env[.properties]
+spring.data.mongodb.uri=${MONGODB_URI}
