--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,7 @@
-FROM openjdk:17-slim
+FROM eclipse-temurin:17-jre
 
 WORKDIR /app
 COPY target/hospital-er.jar app.jar
 
-# Add TLS fix
-CMD ["java", "-Djdk.tls.client.protocols=TLSv1.2", "-jar", "app.jar"]
+# Simple run
+CMD ["java", "-jar", "app.jar"]
