--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,15 +1,6 @@
-FROM maven:3.9.6-eclipse-temurin-17 AS builder
+FROM openjdk:17-slim
 
 WORKDIR /app
-COPY pom.xml .
-RUN mvn dependency:go-offline -B
+COPY target/hospital-er.jar app.jar
 
-COPY src ./src
-RUN mvn clean package -DskipTests
-
-FROM eclipse-temurin:17-jre
-
-WORKDIR /app
-COPY --from=builder /app/target/hospital-er.jar app.jar
-
-CMD ["java", "-Djdk.tls.client.protocols=TLSv1.2", "-jar", "app.jar"]
+CMD ["java", "-jar", "app.jar"]
