--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,13 @@
-FROM eclipse-temurin:17-jre
-
+# Stage 1: Build the JAR
+FROM maven:3.9.6-eclipse-temurin-17 AS builder
 WORKDIR /app
-COPY target/hospital-er.jar app.jar
+COPY pom.xml .
+RUN mvn dependency:go-offline -B
+COPY src ./src
+RUN mvn clean package -DskipTests
 
+# Stage 2: Create the final image
+FROM eclipse-temurin:17-jre
+WORKDIR /app
+COPY --from=builder /app/target/hospital-er.jar app.jar
 CMD ["java", "-jar", "app.jar"]
